--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose --watch"
+    "test": "jest --verbose --watch",
+    "test:features": "cucumber-js"
   },
   "keywords": [],
   "author": "Jose Aburto",
   "license": "ISC",
   "devDependencies": {
+    "@cucumber/cucumber": "^8.7.0",
     "@types/jest": "^29.2.2",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
